# todo

./: .gitignore  Cargo.toml
src/: main.rs
src/ui/: task.rs
src/utils/: datetimex.rs  mod.rs
ui/: appwindow.slint  callbacks.slint  common.slint
ui/common/: callbacks.slint  struct.slint
ui/left/: add_popup.slint  item_list.slint
ui/views/: selection_list_view.slint
ui/widgets/: action_button.slint  add_popup.slint  focus_touch_area.slint  icon_button.slint  item_list.slint  state_layer.slint  styling.slint  text_button.slint
