[package]
name = "todo"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.209", features = ["derive"] }
serde_derive = "1.0.209"
serde_json = "1.0.127"
slint = "1.7.2"

[build-dependencies]
slint-build = "1.7.2"
